<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewBook"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr2"
    tools:context=".Book">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/none"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivInfo1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/none"
                    app:srcCompat="@drawable/info_empty" />

                <ImageView
                    android:id="@+id/ivInfo2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/none"
                    app:srcCompat="@drawable/info_empty" />

                <ImageView
                    android:id="@+id/ivInfo3"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/none"
                    app:srcCompat="@drawable/info_empty" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/rGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbShiatsu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shiatsu"
                    android:textColor="@color/textColor" />

                <RadioButton
                    android:id="@+id/rbThai"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thai_massage"
                    android:textColor="@color/textColor" />

                <RadioButton
                    android:id="@+id/rbSwedish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/swedish_massage"
                    android:textColor="@color/textColor" />
            </RadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:text="@string/opening_times"
                android:textColor="@color/textColor"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivMassage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:alpha=".8"
            android:contentDescription="@string/none"
            android:visibility="invisible"
            app:srcCompat="@drawable/massage1" />

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/how_many_people"
                android:textColor="@color/textColor"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/etQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:ems="2"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/textColor"
                android:visibility="invisible"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btnQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@android:string/ok"
                android:textColor="@color/textColor"
                android:visibility="invisible"
                tools:ignore="ButtonOrder" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:ems="5"
                android:gravity="center"
                android:hint="@string/enter_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/textColor"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@android:string/ok"
                android:textColor="@color/textColor"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <ImageView
            android:id="@+id/ivMassage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/none"
            android:visibility="gone"
            app:srcCompat="@drawable/massage2" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:ems="7"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@color/textColor"
            android:visibility="invisible"
            tools:ignore="Autofill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnDateChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/set_date"
                android:textColor="@color/textColor"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnTimeChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/set_time"
                android:textColor="@color/textColor"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivMassage3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/none"
            android:visibility="gone"
            app:srcCompat="@drawable/massage3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/reset"
                android:textColor="@color/textColor"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_button"
                android:enabled="false"
                android:text="@string/next"
                android:textColor="@color/textColor"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>